fix: overflow of task title when title is too long

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -830,6 +830,14 @@ body {
   white-space: nowrap;
 }
 
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.text-clip {
+  text-overflow: clip;
+}
+
 .rounded-lg {
   border-radius: var(--radius);
 }
@@ -1046,10 +1054,6 @@ body {
 
 .font-bold {
   font-weight: 700;
-}
-
-.italic {
-  font-style: italic;
 }
 
 .text-black {
